Fix external link indicator artifact on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -18,7 +18,7 @@ body {
 }
 
 a.external-link:after {
-  content: "\00a0\00a0\00a0\00a0\00a0";
+  content: "\00a0\00a0\00a0\00a0";
   display: inline-block;
   margin-left: 0.2rem;
   text-decoration: none;
